crates/ts-pack-core/tests/snapshots/wire_format__data_attribute_shape.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "DataAttribute\n{ name: \"class\".to_string(), value: \"highlight\".to_string(), span: span(), }"
---
{
  "name": "class",
  "value": "highlight",
  "span": {
    "start_byte": 10,
    "end_byte": 20,
    "start_line": 1,
    "start_column": 0,
    "end_line": 2,
    "end_column": 5
  }
}
