crates/ts-pack-core/tests/snapshots/wire_format__data_node_container_shape.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "DataNode\n{\n    kind: DataNodeKind::KeyValue, key: None, value: None, attributes: vec![],\n    children:\n    vec![DataNode\n    {\n        kind: DataNodeKind::KeyValue, key: Some(\"port\".to_string()), value:\n        Some(\"8080\".to_string()), attributes: vec![], children: vec![], span:\n        span(),\n    }], span: span(),\n}"
---
{
  "kind": "KeyValue",
  "children": [
    {
      "kind": "KeyValue",
      "key": "port",
      "value": "8080",
      "span": {
        "start_byte": 10,
        "end_byte": 20,
        "start_line": 1,
        "start_column": 0,
        "end_line": 2,
        "end_column": 5
      }
    }
  ],
  "span": {
    "start_byte": 10,
    "end_byte": 20,
    "start_line": 1,
    "start_column": 0,
    "end_line": 2,
    "end_column": 5
  }
}
