crates/ts-pack-core/tests/snapshots/wire_format__data_node_element_shape.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "DataNode\n{\n    kind: DataNodeKind::Element, key: Some(\"server\".to_string()), value: None,\n    attributes:\n    vec![DataAttribute\n    { name: \"id\".to_string(), value: \"main\".to_string(), span: span(), }],\n    children: vec![], span: span(),\n}"
---
{
  "kind": "Element",
  "key": "server",
  "attributes": [
    {
      "name": "id",
      "value": "main",
      "span": {
        "start_byte": 10,
        "end_byte": 20,
        "start_line": 1,
        "start_column": 0,
        "end_line": 2,
        "end_column": 5
      }
    }
  ],
  "span": {
    "start_byte": 10,
    "end_byte": 20,
    "start_line": 1,
    "start_column": 0,
    "end_line": 2,
    "end_column": 5
  }
}
