crates/ts-pack-core/tests/snapshots/wire_format__data_node_kind_serializes_as_bare_string-2.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "DataNodeKind::Element"
---
"Element"
