crates/ts-pack-core/tests/snapshots/wire_format__data_node_leaf_shape.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "DataNode\n{\n    kind: DataNodeKind::KeyValue, key: Some(\"host\".to_string()), value:\n    Some(\"localhost\".to_string()), attributes: vec![], children: vec![], span:\n    span(),\n}"
---
{
  "kind": "KeyValue",
  "key": "host",
  "value": "localhost",
  "span": {
    "start_byte": 10,
    "end_byte": 20,
    "start_line": 1,
    "start_column": 0,
    "end_line": 2,
    "end_column": 5
  }
}
