crates/ts-pack-core/tests/snapshots/wire_format__process_config_shape.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "ProcessConfig\n{\n    language: std::borrow::Cow::Borrowed(\"python\"), structure: true, imports:\n    true, exports: true, comments: false, docstrings: false, symbols: false,\n    diagnostics: false, chunk_max_size: None, data_extraction: false,\n}"
---
{
  "language": "python",
  "structure": true,
  "imports": true,
  "exports": true,
  "comments": false,
  "docstrings": false,
  "symbols": false,
  "diagnostics": false,
  "chunk_max_size": null,
  "data_extraction": false
}
